- get: /result/id will not drop the result - post: /result/id will drop it - openapi udpate - other changes
