# docs/api.openapi.yml
@@ -4,7 +4,7 @@ info:
     This Rest API uses `JSON only`. Everytime an error occurs, I send and ApiError json object. 
     For more information see the README file at git.
     "
-    version: "0.1"
+    version: "0.3"
     title: "DEPP Project API"
     contact:
         email: "dominic.wrege001@stud.fh-dortmud.de"
@@ -61,13 +61,13 @@ paths:
                                 $ref: "#/components/schemas/ApiError"
     /result/{iliasId}:
         get:
-            summary: "Returns the result for the submission by given iliasID"
+            summary: "Returns the result and keps until the post method is invoked for the submission by given iliasID"
             operationId: "getResults"
             parameters:
                 - name: iliasId
                   in: path
                   required: true
-                  description: "Needs and existing iliasId to find the result. After that I will remove this iliasId from the cache."
+                  description: "Needs and existing iliasID to find the result. After that I will remove this iliasId from the cache."
                   schema:
                         type: integer
                         format: int64
@@ -78,6 +78,39 @@ paths:
                         application/json:
                             schema:
                                 $ref: "#/components/schemas/Result"
+                400:
+                    description: "Parameter error invalid digit found in string. An interger64 is required"
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/ApiError"
+
+                404:
+                    description: "No Results not found for given Ilias ID: {id}"
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/ApiError"
+                500:
+                    description: "Generic Error"
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/ApiError"
+        post:
+            summary: "Drops the result for the given iliasID"
+            operationId: "rmResults"
+            parameters:
+                - name: iliasId
+                  in: path
+                  required: true
+                  description: "Needs and existing iliasId to find the result. After that I will remove this iliasId from the cache."
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                200:
+                    description: "Returns the result for the submission"
                 400:
                     description: "Parameter error invalid digit found in string. An interger64 is required"
                     content:
